css/main.css
@import url(https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css);
@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,600,400);

body {
	font-family: "Open Sans", Helvetica, Arial, sans-serif;
	font-weight: 400;
	background: #f7f9fa; 
	padding-top: 60px;
}

nav {
	width: 100%;
	position: fixed;
	font-size: 16px;
	z-index: 1;
}

h1, h2 {
	font-weight: 300;
}

h3 , strong {
	font-weight: 600;
}

.navbar {
	background-color: #0080bc;
	border: none;
	border-radius: 0px;
	border-bottom: 1px solid #E2E2E2;
	padding: 5px;
}

.navbar-toggle {
	margin-top: 0em;
}

.navbar li {
	font-family: "Open Sans", Helvetica, Arial, sans-serif;
	list-style: none;
}

.navbar ul {
	padding-left:0;
	margin-left: 10px;
	margin-top: 0;
	padding:0;
}
.navbar a {
	color: #FFFFFF;
	margin:0;
	padding-top: 10px;
	padding-bottom: 10px;
	padding-left: 15px;
	padding-right: 15px;
}

#navbar a {
	width: 100%;
	display: inline-block;
	margin: 0;
}
.box {
	text-align: justify;
}

#logo {
	margin-left: 0px;
	padding-top: 12px;
}

#logo a {
	padding-top: 8px;
	padding-bottom: 0px;
}

#logo a:hover {
	text-decoration: none;
}

.container-fluid {
	padding-left: 0px;
}

table, th, td {
   border: 1px solid #ddd;
}

.row {
	margin-bottom: 1em;
}

main {
	padding-left: 1em;
	background: #f7f9fa; 
}

#content {
	margin-bottom: 1em;
	margin-right: 1em;
	background: #f7f9fa; 

}

#socialMedia {
	font-size: 1.5em;
}

#socialMedia a {
	padding-left: 0.3em;
	padding-right: 0.3em;
}

#footer {
	background-color: #0080bc;
	padding-top: 15px;
	padding-left: 15px; 
	padding-bottom:5px;
	color: #FFFFFF;
	font-weight: lighter;
	height: 80px;
}

#footer a, #footer a:hover {
	color: #FFFFFF;
}

.calendar-row {
	margin-top: 1em;
}

.quiz {
	color: red;
}

.calendar-col {
	border-top: 1px solid #0080bc;
}

#homeMid {
	margin-top: 3em;
	margin-bottom: 3em;
}

.notesBtn {
	border: 1px solid;
}

.navNames:hover {
	text-decoration: none;
}
/*use class for links you don't want to turn blue and underline*/

.static-link:link, .static-link:hover, .static-link:visited, .static-link:active {
	color: #FFFFFF;
	text-decoration: none;
}

@media screen and (min-width: 768px) {
	
.navbar a:focus {
	background-color: #00597A;
	text-decoration: none;
}

	.table {
		width: 90%;
		margin-left: 5%;
	}
	.row {
		padding: 1em;
	}
	.row h3 {
		margin-top: 0em;
	}
	.navbar ul li {
		float: left;
	}
	main {
		padding-left: 2em;
	}
	.navNames a:hover {
		background-color: #00597A;
		text-decoration: none;
	}
}

@media screen and (min-width: 992px) {
	#socialMedia a {
		float: right;
	}
	ul {
		margin-left: 3em;
	}
	#hwBtnCombo {
		margin-top: 2em;
	}
	.calendar-col {
		border-top: none;
	}
	#footer {
		height: 60px;
	}
}

@media screen and (max-width: 768px) {
	.navNames:hover {
		background-color: #00597A;
		width: 100%;
		text-decoration: none;
		margin: 0;
	}
	#navbar {
		padding:0;
	}
}

